# makepad

./: Cargo.toml
examples/egg/: Cargo.toml
examples/egg/src/: app.rs  app_desktop.rs  app_mobile.rs  lib.rs  main.rs
examples/egg/synth_egg/: Cargo.toml
platform/derive_live/src/: live_design_macro.rs
tools/cargo_makepad/src/: main.rs
