[package]
name = "makepad-example-egg"
version = "0.3.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2018"
description = "Makepad egg example"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "HMVEfWglH6ETM-XrlBqp9bOYnlw="

[dependencies]
makepad-synth-egg = { path = "./synth_egg", version = "0.3.0" }
#makepad-example-fractal-zoom = { path = "../fractal_zoom", version = "0.3.0" }
#makepad-example-numbers = { path = "../numbers", version = "0.3.0" }
makepad-audio-widgets = { path = "../../audio_graph/audio_widgets", version = "0.3.0" }
#makepad-miniz = { path = "../../libs/miniz", version = "0.3.0" }
#makepad-base64 = { path = "../../libs/base64", version = "0.3.0" }

