[package]
name = "makepad-example-egg"
version = "0.1.0"
authors = ["TeamDman"]
edition = "2021"
description = "Makepad egg example"
license = "MPLv2"
homepage = "https://github.com/teamdman/makepad/"
repository = "https://github.com/teamdman/makepad/"
metadata.makepad-auto-version = "HMVEfWglH6ETM-XrlBqp9bOYnlw="

[dependencies]
makepad-widgets = { path = "../../widgets", version = "0.3.0" }
